# PocketCM

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
pocket-cm/: Dockerfile  pyproject.toml  requirements.txt
pocket-cm/.github/workflows/: README.md  ci.yml
pocket-cm/src/core/: config.py  rate_limit.py
pocket-cm/src/models/: schemas.py
pocket-cm/src/services/: extraction.py
pocket-cm/tests/: conftest.py  test_api_client.py  test_config.py  test_extraction.py  test_security.py
src/: __init__.py  main.py
src/api/: upload.py
src/core/: config.py  rate_limit.py  security.py
src/models/: schemas.py
src/services/: api_client.py  extraction.py
tests/: conftest.py  test_extraction.py  test_pydantic_validation.py  test_schemas.py
