[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-cm-ai-agent"
version = "1.0.0"
description = "AI Onboarding Agent for Pocket.cm"
authors = [{name = "Pocket CM Team", email = "tech@pocket.cm"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
target-version = "py311"